--- a/src/pages/styles/register-login.css
+++ b/src/pages/styles/register-login.css
@@ -6,6 +6,8 @@
     min-height: 100vh;
     font-family: 'Girassol', cursive;
     background-image: url(https://picsum.photos/800/800);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .registerContainer{
