--- a/src/pages/styles/datails.css
+++ b/src/pages/styles/datails.css
@@ -1,5 +1,8 @@
 .detailsContainer{
 display: flex;
-justify-content: center;
-align-items: center;
+}
+
+.detailsContainer .blogWarning{
+    color: gray;
+    font-size: 13px;
 }
