--- a/src/pages/styles/datails.css
+++ b/src/pages/styles/datails.css
@@ -7,12 +7,15 @@
 .detailsContainer .cardContainer {
     display: flex;
     flex-direction: column;
+    box-shadow: 5px 10px 8px #f6b3a7;
+
 }
 
 .cardContainer .blogWarning {
     color: gray;
     font-size: 1px;
 }
+
 
 
 .buttons{
@@ -34,6 +37,7 @@
     box-shadow: 0 0 20px #eee;
     border-radius: 10px;
     display: block;
+
 }
 
 .cardContainer .editButton:hover {
