--- a/src/components/style.css
+++ b/src/components/style.css
@@ -131,6 +131,8 @@
     object-position: center;
     /* cardlardaki img lere verilen efect :   */
     filter: drop-shadow(8px 8px 10px gray);
+  
+    filter:hue-rotate(180deg);
 }
 
 .cardContainer .favBtn{
